Fix chip spacing

--- a/scss/_patterns_badge.scss
+++ b/scss/_patterns_badge.scss
@@ -29,7 +29,9 @@
   .p-chip--information {
     .p-badge,
     .p-badge--negative {
-      margin-right: 0.05rem;
+      margin-left: $sph--small;
+      margin-right: -0.15rem;
+      align-self: center;
     }
   }
 }
